# t2z

./: .dockerignore  .gitignore  CONTRIBUTING.md  LICENSE  README.md  REQ.md  REQUIREMENTS.md  SECURITY.md
.github/workflows/: release.yml
bindings/go/: README.md  examples_test.go  integration_test.go  t2z.go
bindings/go/examples/zebrad-mainnet/cmd/device-a/: main.go
bindings/go/examples/zebrad-mainnet/cmd/send/: main.go
bindings/go/examples/zebrad-regtest/: README.md
bindings/go/examples/zebrad-regtest/2-multiple-outputs/: main.go
bindings/go/examples/zebrad-regtest/8-combine-workflow/: main.go
bindings/go/examples/zebrad-regtest/9-offline-signing/: main.go
bindings/go/examples/zebrad-regtest/data/: spent-utxos.json
bindings/go/examples/zebrad-t2z/: README.md
bindings/go/examples/zebrad-t2z/5-shielded-output/: main.go
bindings/go/examples/zebrad-t2z/6-multiple-shielded/: main.go
bindings/go/examples/zebrad-testnet/: README.md  go.mod  main.go
bindings/java/: .gitignore  README.md  build.gradle
bindings/java/examples/zebrad-mainnet/: README.md  build.gradle
bindings/java/examples/zebrad-regtest/: README.md  build.gradle
bindings/java/examples/zebrad-t2z/: README.md  build.gradle
bindings/java/src/main/java/com/zcash/t2z/: PCZT.java  Signing.java  T2z.java  T2zLib.java  TransparentInput.java
bindings/java/src/test/java/com/zcash/t2z/: T2zTest.java
bindings/kotlin/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
bindings/kotlin/examples/zebrad-mainnet/: README.md  build.gradle.kts
bindings/kotlin/examples/zebrad-regtest/: README.md  build.gradle.kts
bindings/kotlin/examples/zebrad-t2z/: README.md  settings.gradle.kts
bindings/kotlin/examples/zebrad-testnet/: settings.gradle.kts
bindings/typescript/: .gitignore  README.md  package.json  tsconfig.json
bindings/typescript/__tests__/: integration.test.ts
bindings/typescript/examples/zebrad-mainnet/: README.md  package.json
bindings/typescript/examples/zebrad-mainnet/src/: device-a.ts  device-b.ts  generate-wallet.ts  send.ts
bindings/typescript/examples/zebrad-regtest/: README.md  package.json
bindings/typescript/examples/zebrad-regtest/data/: spent-utxos.json
bindings/typescript/examples/zebrad-regtest/src/: setup.ts  zebra-client.ts
bindings/typescript/examples/zebrad-regtest/src/examples/: 2-multiple-outputs.ts  8-combine-workflow.ts  9-offline-signing.ts
bindings/typescript/examples/zebrad-t2z/: README.md
bindings/typescript/examples/zebrad-t2z/src/: check-keys.ts  debug-parse.ts  debug-utxo.ts  utils.ts
bindings/typescript/examples/zebrad-t2z/src/examples/: 3-mixed-outputs.ts
bindings/typescript/examples/zebrad-testnet/: README.md  package.json
bindings/typescript/examples/zebrad-testnet/src/: demo.ts
bindings/typescript/src/: index.ts  lib.ts
bindings/typescript/src/utils/: signing.ts
core/rust/: Cargo.toml  README.md  cbindgen.toml  justfile
core/rust/src/: error.rs  lib.rs  types.rs
core/rust/tests/: ffi_test.rs  test_remaining_apis.rs
core/rust/tests/common/: fixtures.rs
go/: .gitignore  README.md  examples_test.go  go.mod  go.sum  integration_test.go  t2z.go  t2z.test  t2z_test.go
go/examples/basic/: README.md  main.go
go/examples/hardware_wallet/: README.md  main.go
go/examples/zebrad-t2z/: README.md
go/examples/zebrad-t2z/1-single-output/: main.go
go/examples/zebrad-t2z/2-multiple-outputs/: main.go
go/examples/zebrad-t2z/3-utxo-consolidation/: main.go
go/examples/zebrad-t2z/4-attack-scenario/: main.go
go/examples/zebrad-t2z/5-shielded-output/: main.go
go/examples/zebrad-t2z/6-multiple-shielded/: main.go
go/examples/zebrad-t2z/7-mixed-outputs/: main.go
go/examples/zebrad/3-utxo-consolidation/: main.go
infra/linux-build/: Dockerfile  docker-compose.yml
infra/zebrad/: README.md  docker-compose.yml  zebra-regtest.toml
infra/zebrad-mainnet/: Dockerfile  README.md  docker-compose.yml  zebra-mainnet.toml
infra/zebrad-regtest/: Dockerfile
infra/zebrad-testnet/: Dockerfile  README.md  docker-compose.yml  zebra-testnet.toml
java/: README.md  build.gradle  settings.gradle
java/examples/zebrad-t2z/: .gitignore  README.md  build.gradle  settings.gradle
java/src/main/java/com/zcash/t2z/: PCZT.java  Payment.java  ResultCode.java  T2z.java  T2zException.java  T2zLib.java  TransactionRequest.java  TransparentOutput.java
kotlin/: README.md  build.gradle.kts
kotlin/examples/zebrad-t2z/: README.md  build.gradle.kts
kotlin/src/main/kotlin/com/zcash/t2z/: Signing.kt  T2z.kt  T2zLib.kt
rust/: Cargo.toml  README.md  TESTING.md  TEST_SUMMARY.md  build.rs
rust/examples/: Makefile  example.c
rust/include/: t2z.h
rust/src/: error.rs  ffi.rs  lib.rs  types.rs
rust/tests/: ffi_test.rs  integration_test.rs  test_append_signature.rs  test_remaining_apis.rs  test_shielded_output.rs
rust/tests/common/: fixtures.rs  mock.rs  mod.rs
scripts/: build-all.sh  build-dev.js  clean.js  clean.sh  run-regtest-examples.js  test-all.js  test-all.sh
typescript/: Cargo.toml  README.md  build.rs  index.d.ts  index.js  package-lock.json  package.json
typescript/__tests__/: integration.test.ts
typescript/examples/basic/: index.ts  package.json
typescript/examples/hardware-wallet/: index.ts  package.json
typescript/examples/testnet-send/: .env.example  .gitignore  README.md  debug-index-lightwalletd.ts  generate-keys.ts  index-lightwalletd.ts  index.ts  lightwalletd.proto  package-lock.json  package.json  test-rpc.ts
typescript/examples/zebrad-t2z/: .dockerignore  Dockerfile  QUICKSTART.md  README.md  ZEBRA-NOTES.md  docker-compose.yml  package-lock.json  package.json  zebra.toml
typescript/examples/zebrad-t2z/data/: spent-utxos.json
typescript/examples/zebrad-t2z/src/: keys.ts  setup.ts  utils.ts  zebra-client.ts
typescript/examples/zebrad-t2z/src/examples/: 1-single-output.ts  2-multiple-outputs.ts  3-mixed-outputs.ts  4-attack-scenario.ts  5-shielded-output.ts  6-multiple-shielded.ts  7-mixed-transparent-shielded.ts
typescript/src/: index.ts  lib.rs  lib.ts  types.ts
(+52 files in other folders)
