[package]
name = "t2z"
version = "0.1.0"
edition = "2021"

[lib]
name = "t2z"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
# Core PCZT library
pczt = { git = "https://github.com/zcash/librustzcash.git", features = ["transparent", "orchard", "sapling", "signer", "io-finalizer", "zcp-builder", "prover", "spend-finalizer", "tx-extractor"] }

# Transaction building - REQUIRED for core functionality
zcash_primitives = { git = "https://github.com/zcash/librustzcash.git", features = ["transparent-inputs"] }       # Transaction builder
zcash_address = { git = "https://github.com/zcash/librustzcash.git" }          # Address parsing
zcash_protocol = { git = "https://github.com/zcash/librustzcash.git" }         # Value types, consensus
zcash_transparent = { git = "https://github.com/zcash/librustzcash.git", features = ["transparent-inputs"] }      # Transparent addresses
rand_core = "0.6"                                                                # RNG for builder
orchard = "0.11"                                                                 # Orchard address handling
subtle = "2.5"                                                                   # Constant-time Option type
secp256k1 = "0.29"                                                               # ECDSA for transparent addresses

# FFI and error handling
libc = "0.2"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
# Testing utilities
hex = "0.4"
proptest = "1.4"        # Property-based testing
criterion = "0.5"       # Benchmarking

# Additional test-only dependencies
zcash_proofs = { git = "https://github.com/zcash/librustzcash.git" }  # For proof tests
zip321 = { git = "https://github.com/zcash/librustzcash.git" }         # ZIP321 parsing tests

[build-dependencies]
cbindgen = "0.26"

[features]
default = []
# Mock expensive cryptographic operations for faster testing
mock-crypto = []
# Enable test utilities
test-utils = []

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.test]
opt-level = 1           # Faster test compilation
